--- a/syllabus_pages/know-about-temporaly-society.html
+++ b/syllabus_pages/know-about-temporaly-society.html
@@ -31,10 +31,10 @@ DOCTYPE html>
         <li>授業への積極性・貢献度 10%</li>
         <li>最終レポート 30%</li>
         <h1>授業の内容</h1>
-        <li>オムニバス形式で行われる</li>
-        <li>毎回レポートを書き、LMS上で公開され、読んだ上での感想を書く </li>
-        <li>最終レポートで関心を持ったテーマへの課題と解決策を書くことになる</li>
-        <li>質問は加点</li>
+        <li>オムニバス形式で行われる。</li>
+        <li>毎回レポートを書き、LMS上で公開され、読んだ上での感想を書く。 </li>
+        <li>最終レポートで関心を持ったテーマへの課題と解決策を書くことになる。</li>
+        <li>質問は加点。</li>
         </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
