--- a/syllabus_pages/leading-mathematics.html
+++ b/syllabus_pages/leading-mathematics.html
@@ -31,9 +31,9 @@
         <li>小テスト 40%</li>
         <li>レポート 60%</li>
         <h1>授業の内容</h1>
-        <li>社会に応用されている数学を学ぶ</li>
-        <li>授業の深堀を最終レポートで記述する</li>
-        <li>授業中に数式は多く紹介されるが、数式を立式して解ける必要はない</li>
+        <li>社会に応用されている数学を学ぶ。</li>
+        <li>授業の深堀を最終レポートで記述する。</li>
+        <li>授業中に数式は多く紹介されるが、数式を立式して解ける必要はない。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
