--- a/syllabus_pages/life-design.html
+++ b/syllabus_pages/life-design.html
@@ -32,8 +32,8 @@
         <li>授業への積極性・貢献度 10%</li>
         <li>最終レポート 30%</li>
         <h1>授業の内容</h1>
-        <li>今ある自分の生活をもう一度デザインしなおす講義</li>
-        <li>他の講義のようなペルソナを設定してのデザイン思考ではなく、自分主体のアート思考で講義が進む</li>
+        <li>今ある自分の生活をもう一度デザインしなおす講義。</li>
+        <li>他の講義のようなペルソナを設定してのデザイン思考ではなく、自分主体のアート思考で講義が進む。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
