--- a/syllabus_pages/living-environment.html
+++ b/syllabus_pages/living-environment.html
@@ -32,8 +32,8 @@
         <li>授業への積極性・貢献度 10%</li>
         <li>最終レポート 60%</li>
         <h1>授業の内容</h1>
-        <li>身の回りの生活環境を自分を生活の主体として捉えなおしていく</li>
-        <li>身近な問題から生活環境改善を促すような提案を発表する</li>
+        <li>身の回りの生活環境を自分を生活の主体として捉えなおしていく。</li>
+        <li>身近な問題から生活環境改善を促すような提案を発表する。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
