--- a/syllabus_pages/machine-learning.html
+++ b/syllabus_pages/machine-learning.html
@@ -30,9 +30,9 @@
         <h1>評価の割合</h1>
         <li>学期末試験 100%</li>
         <h1>授業の内容</h1>
-        <li>Pythonなどを用いて実際にクラスタリングや探索などの機械学習方法を学ぶ</li>
-        <li>期末はペーパーテストなのでプログラミングを組んで動かす必要はないが、落としてしまうと追試がある</li>
-        <li>人工知能の講義の知識があるとちょっとやりやすい</li>
+        <li>Pythonなどを用いて実際にクラスタリングや探索などの機械学習方法を学ぶ。</li>
+        <li>期末はペーパーテストなのでプログラミングを組んで動かす必要はないが、落としてしまうと追試がある。</li>
+        <li>人工知能の講義の知識があるとちょっとやりやすい。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
