--- a/syllabus_pages/management-accounting.html
+++ b/syllabus_pages/management-accounting.html
@@ -30,9 +30,8 @@
         <h1>評価の割合</h1>
         <li>学期末試験 100%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>簿記や損益分析などの管理会計の基礎を学ぶ。</li>
+        <li>起業したい人はこの授業を通して会計の重要さや業績の測り方を学ぶべき。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
