--- a/syllabus_pages/marketing.html
+++ b/syllabus_pages/marketing.html
@@ -31,9 +31,8 @@
         <li>小テスト 40%</li>
         <li>最終レポート 60%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>マーケティングの基礎理論をケーススタディで学んでいく。</li>
+        <li>マーケティング基礎の延長線上で、より現実的な話を聞ける。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
