--- a/syllabus_pages/material-science.html
+++ b/syllabus_pages/material-science.html
@@ -31,8 +31,8 @@
         <li>レポートまたは小テスト 90%</li>
         <li>授業への積極性・貢献度 10%</li>
         <h1>授業の内容</h1>
-        <li>レアメタルや有機化合物などの物質の特徴や現実社会での使用用途を学習する</li>
-        <li>毎回好きな物質について調べる課題レポートがある</li>
+        <li>レアメタルや有機化合物などの物質の特徴や現実社会での使用用途を学習する。</li>
+        <li>毎回好きな物質について調べる課題レポートがある。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
