--- a/syllabus_pages/medical -rule-innovation-and-medical-economics.html
+++ b/syllabus_pages/medical -rule-innovation-and-medical-economics.html
@@ -29,9 +29,8 @@
         <li>レポート 30%</li>
         <li>演習の発表 70%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>各国の医療制度や経済状況を比較し、現在の医療制度や医療経済の課題などを見つける。</li>
+        <li>米田先生の回ではグループワークをすることになる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
