--- a/syllabus_pages/medical-care-from-life-science-view.html
+++ b/syllabus_pages/medical-care-from-life-science-view.html
@@ -31,9 +31,9 @@
         <li>講義への積極性・貢献度 50%</li>
         <li>発表会の内容 50%</li>
         <h1>授業の内容</h1>
-        <li>身体と病気についての基本的な知識を学ぶ</li>
-        <li>グループをローテーションして前回の講義を深堀したものを発表する</li>
-        <li>最終発表では今後の医療に役立つ提案を発表する</li>
+        <li>身体と病気についての基本的な知識を学ぶ。</li>
+        <li>グループをローテーションして前回の講義を深堀したものを発表する。</li>
+        <li>最終発表では今後の医療に役立つ提案を発表する。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
