--- a/syllabus_pages/medical-care-from-social-view.html
+++ b/syllabus_pages/medical-care-from-social-view.html
@@ -31,8 +31,8 @@
         <li>授業への積極性 50%</li>
         <li>発表会の内容 50%</li>
         <h1>授業の内容</h1>
-        <li>日本の医療体制、保険、法規制を学ぶ</li>
-        <li>グループワークで医療変革アイデアを発表</li>
+        <li>日本の医療体制、保険、法規制を学ぶ。</li>
+        <li>グループワークで医療変革アイデアを発表。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
