--- a/syllabus_pages/medical-rule-innovation-and-medical-economics.html
+++ b/syllabus_pages/medical-rule-innovation-and-medical-economics.html
@@ -30,8 +30,8 @@
         <li>レポート 30%</li>
         <li>演習の発表 70%</li>
         <h1>授業の内容</h1>
-        <li>各国の医療制度や経済状況を比較し、現在の医療制度や医療経済の課題などを見つける</li>
-        <li>米田先生の回ではグループワークをすることになる</li>
+        <li>各国の医療制度や経済状況を比較し、現在の医療制度や医療経済の課題などを見つける。</li>
+        <li>米田先生の回ではグループワークをすることになる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
