--- a/syllabus_pages/optical-technology.html
+++ b/syllabus_pages/optical-technology.html
@@ -31,9 +31,8 @@
         <li>小テスト 50%</li>
         <li>レポート 50%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>中学、高校で学んだ光の反射や屈折などをさらに詳しく学習したり、波動光学について学んだりする。</li>
+        <li>期末はレポートではなくテスト。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
