--- a/syllabus_pages/physical-brain-connecting.html
+++ b/syllabus_pages/physical-brain-connecting.html
@@ -31,8 +31,8 @@
         <li>講義への積極性・貢献度 50%</li>
         <li>発表会の内容 50%</li>
         <h1>授業の内容</h1>
-        <li>身体や脳に関する少し専門的なことを学ぶ</li>
-        <li>生命科学的視点から見る医療と先端医学の延長線上の講義</li>
+        <li>身体や脳に関する少し専門的なことを学ぶ。</li>
+        <li>生命科学的視点から見る医療と先端医学の延長線上の講義。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
