--- a/syllabus_pages/pioneer-on-medicine.html
+++ b/syllabus_pages/pioneer-on-medicine.html
@@ -31,9 +31,9 @@
         <li>授業への積極性・貢献度 50%</li>
         <li>発表会の内容 50%</li>
         <h1>授業の内容</h1>
-        <li>身体を構成する細胞などの基本的な知識を学ぶ</li>
-        <li>前回を踏まえた深堀を毎回グループ発表する</li>
-        <li>最終発表では医療改革できるような提案をする</li>
+        <li>身体を構成する細胞などの基本的な知識を学ぶ。</li>
+        <li>前回を踏まえた深堀を毎回グループ発表する。</li>
+        <li>最終発表では医療改革できるような提案をする。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
