--- a/syllabus_pages/planning-optimization.html
+++ b/syllabus_pages/planning-optimization.html
@@ -31,9 +31,8 @@
         <li>試験 67%</li>
         <li>その他 33%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>最短経路問題などに代表される最適化問題についてどうアプローチするかを学ぶ。</li>
+        <li>数学的な内容や計算をすることになる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
