--- a/syllabus_pages/precision-medicine.html
+++ b/syllabus_pages/precision-medicine.html
@@ -32,8 +32,8 @@
         <li>授業への積極性・貢献度 20%</li>
         <li>最終試験 30%</li>
         <h1>授業の内容</h1>
-        <li>薬局やドラッグストアの違いなど医療現場の基礎を学ぶ</li>
-        <li>グループディスカッションで主に進められる</li>
+        <li>薬学、薬の構成や医療現場について学ぶ。</li>
+        <li>授業資料に基づいてグループディスカッションを行い理解を深める。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
