--- a/syllabus_pages/programming-skill.html
+++ b/syllabus_pages/programming-skill.html
@@ -30,8 +30,8 @@
         <h1>評価の割合</h1>
         <li>学期末試験 100%</li>
         <h1>授業の内容</h1>
-        <li>Pythonのプログラミングの基礎のコードを学ぶ</li>
-        <li>出席確認として毎回の確認問題がある</li>
+        <li>Pythonのプログラミングの基礎のコードを学ぶ。</li>
+        <li>出席確認として毎回の確認問題がある。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
