--- a/syllabus_pages/project-management.html
+++ b/syllabus_pages/project-management.html
@@ -31,9 +31,8 @@
         <li>試験 67%</li>
         <li>その他 33%</li>
         <h1>授業の内容</h1>
-        <li>プロジェクトを立ち上げる上で重要となる資源の配分など、プロジェクト全体を運営するにあたって必要な知識を学ぶ</li>
-        <li></li>
-        <li>,,,</li>
+        <li>プロジェクトを立ち上げる上で重要となる資源の配分など、プロジェクト全体を運営するにあたって必要な知識を学ぶ。</li>
+        <li>ガントチャートや緊急事態における行動のシミュレーションを行う。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
