--- a/syllabus_pages/public-policy.html
+++ b/syllabus_pages/public-policy.html
@@ -31,9 +31,8 @@
         <li>定期試験 80%</li>
         <li>平常点 20%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>現代社会において公共政策がどんな役割を持っているかを事例紹介を通じて学習する。</li>
+        <li>現代社会の在り方や構造、また、なぜ今の政策が施行されているかなどの見方を学べる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
