--- a/syllabus_pages/regional-revitalization.html
+++ b/syllabus_pages/regional-revitalization.html
@@ -30,9 +30,8 @@
         <h1>評価の割合</h1>
         <li>期末試験 100%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>地域や地域文化のサステナビリティを学ぶ。</li>
+        <li>地域創生に必要な地域文化と観光、経済をどう結び付けるかを学ぶことができる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
