--- a/syllabus_pages/regulatory-science.html
+++ b/syllabus_pages/regulatory-science.html
@@ -31,9 +31,8 @@
         <li>授業に対する貢献度 50%</li>
         <li>期末レポート 50%</li>
         <h1>授業の内容</h1>
-        <li></li>
-        <li>毎回グループディスカッションの課題が出される</li>
-        <li>,,,</li>
+        <li>医療現場における臨床試験について学ぶ。</li>
+        <li>毎回グループディスカッションの課題が出される。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
