--- a/syllabus_pages/sensering.html
+++ b/syllabus_pages/sensering.html
@@ -30,8 +30,8 @@
         <h1>評価の割合</h1>
         <li>レポート 100%</li>
         <h1>授業の内容</h1>
-        <li>様々なセンシング技術と活用事例などを学ぶ</li>
-        <li>センシングだけではなく統計分析の類もちょっとする</li>
+        <li>様々なセンシング技術と活用事例などを学ぶ。</li>
+        <li>センシングだけではなく統計分析の類もちょっとする。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
