--- a/syllabus_pages/sharing-economy.html
+++ b/syllabus_pages/sharing-economy.html
@@ -30,9 +30,9 @@
         <li>レポート 60%</li>
         <li>受講態度 40%</li>
         <h1>授業の内容</h1>
-        <li>前半部分で若干数式が出る</li>
-        <li>出席確認として課題が出る</li>
-        <li>ミクロ経済学を中心に事例をもとに学んでいく</li>
+        <li>前半部分で若干数式が出る。</li>
+        <li>出席確認として課題が出る。</li>
+        <li>ミクロ経済学を中心に事例をもとに学んでいく。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
