--- a/syllabus_pages/super-old-society-and-science-technology.html
+++ b/syllabus_pages/super-old-society-and-science-technology.html
@@ -31,8 +31,8 @@
         <li>授業に関する貢献度 50%</li>
         <li>期末レポート 50%</li>
         <h1>授業の内容</h1>
-        <li>VRなどの科学技術がどのように超高齢社会を支えていけるかを学ぶ</li>
-        <li>希望すれば実際に使われているVRや実際の現場に訪れることができるかもしれない</li>
+        <li>超高齢社会で起こりそうな病気に対して科学技術でどうアプローチしていくかをグループワークを通して学ぶ。</li>
+        <li>将来的に医療分野に役立つ技術を学びたい人向け。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
