--- a/syllabus_pages/technology-and-medical-care-health-and-nursing.html
+++ b/syllabus_pages/technology-and-medical-care-health-and-nursing.html
@@ -31,9 +31,8 @@
         <li>授業への積極性 50%</li>
         <li>発表会の内容 50%</li>
         <h1>授業の内容</h1>
-        <li>現在の社会福祉現場において活用されているテクノロジーをオムニバス形式で学ぶ</li>
-        <li></li>
-        <li>,,,</li>
+        <li>現在の社会福祉現場において活用されているテクノロジーをオムニバス形式で学ぶ。</li>
+        <li>医療現場で役に立つかもしれないテクノロジーを考える。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
