--- a/syllabus_pages/understand-culture-and-develop-career.html
+++ b/syllabus_pages/understand-culture-and-develop-career.html
@@ -32,9 +32,9 @@
         <li>各回の事前・事後課題 35%</li>
         <li>最終レポート 40%</li>
         <h1>授業の内容</h1>
-        <li>資料を読んで次の回にそれを踏まえた講義を受ける</li>
-        <li>第１回から第４回は自己分析的なことに繋がる</li>
-        <li>第５回以降では異文化とはどういうことかを体験する</li>
+        <li>資料を読んで次の回にそれを踏まえた講義を受ける。</li>
+        <li>第１回から第４回は自己分析的なことに繋がる。</li>
+        <li>第５回以降では異文化とはどういうことかを体験する。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
