--- a/syllabus_pages/world-task-and-skill-trends.html
+++ b/syllabus_pages/world-task-and-skill-trends.html
@@ -32,9 +32,9 @@
         <li>レポート 30%</li>
         <li>その他 30%</li>
         <h1>授業の内容</h1>
-        <li>シラバス通りにはやらない</li>
-        <li>土木的な課題の事例紹介がメイン</li>
-        <li>コンクリートを作ったり、ドローンを飛ばしたり何かしらの実演がある</li>
+        <li>シラバス通りにはやらない。</li>
+        <li>土木的な課題の事例紹介がメイン。</li>
+        <li>コンクリートを作ったり、ドローンを飛ばしたり何かしらの実演がある。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
