--- a/abroad/before.html
+++ b/abroad/before.html
@@ -11,6 +11,7 @@
 </header>
 
 <body>
+    <article>
     <p> ３年生が始まるとすぐに留学や国際インターンシップに向けて先導学類の各教授がプロジェクトを告知、募集が始まるが、<br>
         はっきり言ってこの募集は遅いので準備はもっと前からする必要がある。（2023年度時点）
         かっこ内は実際に行動、入手する推奨時期であり、あくまで目安である。</p><br>
@@ -61,7 +62,12 @@
     <h2>
         <li>出国届提出 （出国の1，2週間前）</li>
     </h2>
+    <p>留学に行く前にLMSの留学関係のページから出国届をださなければならない。<br>必要な書類として航空券などの旅程表を提出する必要があるので、航空券の予約ができたらすぐに出国届を書くと良い</p>
+        <footer>特に２年次に入手推奨のものは住民票を金沢に移していない人は２年生の間に揃えた方が良い。３年生の夏に渡航する場合期間やプロジェクトなどによっては参加が決まり次第ずっとビザ申請などに追われることになる。しかし、その間も授業も通常通り行われるため地元に帰っている暇がない。
+            夏休みに入ったとしてもプロジェクトによっては渡航開始が割と序盤の方だったりして時間がない場合もある。そのため、パスポートや、犯罪経歴証明書は２年生の夏やＱ４後の長期休みを利用して取るのが最善。<br>
 
-        <footer></footer><a href="../abroad.html" class="back">←back</a></footer>
+        </footer>
+    </article>
+        <a href="../abroad.html" class="back">←back</a></footer>
 </body>
 
