--- a/abroad/after.html
+++ b/abroad/after.html
@@ -11,6 +11,7 @@
 </header>
 
 <body>
+    <article></article>
     <p>基本的に留学後にすることは参加プロジェクトによって異なるが、どちらも帰国届を出す必要はある。</p>
     <h3>
         <li>国際部の留学プロジェクト</li>
@@ -22,7 +23,6 @@
     </h3>
     <p>この場合、基本的に留学後に何かを提出しなければならないことはないが、おそらく誰のプロジェクトかによる部分も大きい。<br>
         単位認定は先生の方で進めてくれるはずだろうが、心配なら一度帰国後に単位認定のためにすることはあるかを尋ねた方がよい。</p>
-    <footer>
+</article>
         <a href="../abroad.html" class="back">←back</a>
-    </footer>
 </body>
